services/pfe_devsecops/release/istio-manifests.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
    checkov.io/skip200: CKV_K8S_21=Default namespace is used by design in this 
      architecture
    checkov.io/skip201: CKV_K8S_31=Seccomp profile might break legacy apps
    checkov.io/skip202: CKV_K8S_40=UID 1000 is used instead of 10000 to preserve
      file permissions
    checkov.io/skip203: CKV_K8S_23=Some containers require root
    checkov.io/skip204: CKV_K8S_29=Security context not required for patches
    checkov.io/skip205: CKV_K8S_38=Service account tokens are managed explicitly
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
    checkov.io/skip200: CKV_K8S_21=Default namespace is used by design in this 
      architecture
    checkov.io/skip201: CKV_K8S_31=Seccomp profile might break legacy apps
    checkov.io/skip202: CKV_K8S_40=UID 1000 is used instead of 10000 to preserve
      file permissions
    checkov.io/skip203: CKV_K8S_23=Some containers require root
    checkov.io/skip204: CKV_K8S_29=Security context not required for patches
    checkov.io/skip205: CKV_K8S_38=Service account tokens are managed explicitly
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: frontend
      port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-googleapis
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
    checkov.io/skip200: CKV_K8S_21=Default namespace is used by design in this 
      architecture
    checkov.io/skip201: CKV_K8S_31=Seccomp profile might break legacy apps
    checkov.io/skip202: CKV_K8S_40=UID 1000 is used instead of 10000 to preserve
      file permissions
    checkov.io/skip203: CKV_K8S_23=Some containers require root
    checkov.io/skip204: CKV_K8S_29=Security context not required for patches
    checkov.io/skip205: CKV_K8S_38=Service account tokens are managed explicitly
spec:
  hosts:
  - "accounts.google.com" # Used to get token
  - "*.googleapis.com"
  ports:
  - number: 80
    protocol: HTTP
    name: http
  - number: 443
    protocol: HTTPS
    name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-google-metadata
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
    checkov.io/skip200: CKV_K8S_21=Default namespace is used by design in this 
      architecture
    checkov.io/skip201: CKV_K8S_31=Seccomp profile might break legacy apps
    checkov.io/skip202: CKV_K8S_40=UID 1000 is used instead of 10000 to preserve
      file permissions
    checkov.io/skip203: CKV_K8S_23=Some containers require root
    checkov.io/skip204: CKV_K8S_29=Security context not required for patches
    checkov.io/skip205: CKV_K8S_38=Service account tokens are managed explicitly
spec:
  hosts:
  - metadata.google.internal
  addresses:
  - 169.254.169.254 # GCE metadata server
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  annotations:
    checkov.io/skip100: CKV_K8S_22=Might break file writes
    checkov.io/skip101: CKV_K8S_28=Capabilities needed
    checkov.io/skip102: CKV_K8S_37=Default seccomp is fine
    checkov.io/skip103: CKV_K8S_43=Using latest tags for development
    checkov.io/skip104: CKV_K8S_8=No liveness probe available
    checkov.io/skip105: CKV_K8S_9=No readiness probe available
    checkov.io/skip106: CKV_K8S_10=No CPU requests
    checkov.io/skip107: CKV_K8S_11=No CPU limits
    checkov.io/skip108: CKV_K8S_12=No Memory requests
    checkov.io/skip109: CKV_K8S_13=No Memory limits
    checkov.io/skip110: CKV_K8S_14=No CPU limit
    checkov.io/skip111: CKV_K8S_15=No Memory limit
    checkov.io/skip200: CKV_K8S_21=Default namespace is used by design in this 
      architecture
    checkov.io/skip201: CKV_K8S_31=Seccomp profile might break legacy apps
    checkov.io/skip202: CKV_K8S_40=UID 1000 is used instead of 10000 to preserve
      file permissions
    checkov.io/skip203: CKV_K8S_23=Some containers require root
    checkov.io/skip204: CKV_K8S_29=Security context not required for patches
    checkov.io/skip205: CKV_K8S_38=Service account tokens are managed explicitly
spec:
  hosts:
  - "frontend.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
# [END servicemesh_release_istio_manifests_microservices_demo]
